# cpp-i386-kernel

./: .build.yml  .clang-format  .clang-tidy  .color_coded  .gdbinit  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  Makefile  README.md  build-toolchain.sh  check-style.sh  elf-toolchain.cmake  grub.cfg
include/: Terminal.hpp  Terminal_iterator.hpp  algorithm.hpp  array.hpp  basic_string_view.hpp  char_traits.hpp  gdt.hpp  idt.hpp  inline_asm.hpp  isr.hpp  iterator.hpp  multiboot2.hpp  multiboot_parser.hpp  paging.hpp  serial.hpp  string.h  string.hpp  terminal.hpp  terminal_iterator.hpp  tinyprintf.h  utilities.hpp
include/internal/: Terminal_helpers.hpp
include/kstd/: algorithm.hpp  array.hpp  basic_string_view.hpp  char_traits.hpp  iterator.hpp  string.h  string.hpp  utilities.hpp
src/: Terminal.cpp  boot.nasm  boot.s  cxxabi.cpp  descriptor.nasm  global_constructor_test.cpp  isr.nasm  isr.s  local_static_variable_test.cpp  main.cpp  pure_virtual.cpp  serial.cpp  terminal.cpp  tinyprintf.c
src/internal/: Terminal_helpers.cpp
test/: CMakeLists.txt  test-algorithm.cpp  test-array.cpp  test-basicstringview.cpp  test-chartraits.cpp  test-iterator.cpp  test-multiboot.cpp  test-string.cpp  test-strlen.cpp  test-terminal.cpp
